--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
         .clear-btn { padding: 10px 20px; background: rgba(239, 68, 68, 0.2); border: 1px solid rgba(239, 68, 68, 0.3); border-radius: 8px; color: #fca5a5; font-size: 0.875rem; font-weight: 500; cursor: pointer; transition: all 0.2s; align-self: end; }
         .clear-btn:hover { background: rgba(239, 68, 68, 0.3); }
         .table-container { background: rgba(30, 41, 59, 0.8); border: 1px solid rgba(148, 163, 184, 0.1); border-radius: 12px; overflow: hidden; backdrop-filter: blur(10px); }
-        .table-wrapper { overflow-x: auto; }
+        .table-wrapper { overflow-x: auto; max-height: 600px; overflow-y: auto; }
         table { width: 100%; border-collapse: collapse; font-size: 0.875rem; }
-        th { background: rgba(15, 23, 42, 0.8); padding: 14px 12px; text-align: left; font-weight: 600; color: #e2e8f0; border-bottom: 1px solid rgba(148, 163, 184, 0.1); white-space: nowrap; cursor: pointer; user-select: none; transition: background 0.2s; }
+        thead { position: sticky; top: 0; z-index: 10; }
+        th { background: rgba(15, 23, 42, 0.95); padding: 14px 12px; text-align: left; font-weight: 600; color: #e2e8f0; border-bottom: 1px solid rgba(148, 163, 184, 0.1); white-space: nowrap; cursor: pointer; user-select: none; transition: background 0.2s; }
         th:hover { background: rgba(15, 23, 42, 1); }
         th .sort-indicator { margin-left: 4px; opacity: 0.5; }
         th .sort-indicator.active { opacity: 1; color: #60a5fa; }
@@ -57,6 +58,10 @@
         .page-btn.active { background: #60a5fa; border-color: #60a5fa; color: #0f172a; }
         .per-page-select { padding: 8px 12px; background: rgba(15, 23, 42, 0.6); border: 1px solid rgba(148, 163, 184, 0.2); border-radius: 6px; color: #e2e8f0; font-size: 0.875rem; }
         .numeric { font-family: 'SF Mono', 'Monaco', 'Inconsolata', monospace; text-align: right; }
+        .avg-row { background: linear-gradient(90deg, rgba(96, 165, 250, 0.15), rgba(167, 139, 250, 0.15)); border-top: 2px solid rgba(96, 165, 250, 0.4); }
+        .avg-row td { font-weight: 600; color: #f1f5f9; padding: 14px 12px; }
+        .avg-label { background: linear-gradient(135deg, #60a5fa, #a78bfa); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 700; font-size: 0.9rem; }
+        tfoot { position: sticky; bottom: 0; z-index: 10; }
         @media (max-width: 768px) { .container { padding: 16px; } .header h1 { font-size: 1.75rem; } .filters-grid { grid-template-columns: 1fr; } }
     </style>
 </head>
@@ -123,6 +128,25 @@
                 }
                 return result;
             }, [nameFilter, batsFilter, levelFilter, sortConfig]);
+            
+            // Calculate averages for numeric columns
+            const averages = useMemo(() => {
+                const avgs = {};
+                columns.forEach(col => {
+                    if (col.type === 'number' || col.type === 'decimal') {
+                        const values = filteredData
+                            .map(row => row[col.key])
+                            .filter(v => typeof v === 'number' && !isNaN(v));
+                        if (values.length > 0) {
+                            avgs[col.key] = values.reduce((sum, v) => sum + v, 0) / values.length;
+                        } else {
+                            avgs[col.key] = null;
+                        }
+                    }
+                });
+                return avgs;
+            }, [filteredData]);
+            
             const totalPages = Math.ceil(filteredData.length / perPage);
             const startIndex = (currentPage - 1) * perPage;
             const paginatedData = filteredData.slice(startIndex, startIndex + perPage);
@@ -131,6 +155,12 @@
             const formatValue = (value, type) => {
                 if (value === 'NULL' || value === null || value === undefined) return '—';
                 if (type === 'decimal' && typeof value === 'number') return value.toFixed(2);
+                return value;
+            };
+            const formatAvg = (value, type) => {
+                if (value === null || value === undefined) return '—';
+                if (type === 'decimal') return value.toFixed(2);
+                if (type === 'number') return value.toFixed(1);
                 return value;
             };
             const getLevelClass = (level) => `level-${level}`;
@@ -205,6 +235,19 @@
                                         </tr>
                                     ))}
                                 </tbody>
+                                <tfoot>
+                                    <tr className="avg-row">
+                                        {columns.map((col, idx) => (
+                                            <td key={col.key} className={col.type === 'number' || col.type === 'decimal' ? 'numeric' : ''}>
+                                                {idx === 0 ? (
+                                                    <span className="avg-label">📊 AVG ({filteredData.length.toLocaleString()})</span>
+                                                ) : col.type === 'number' || col.type === 'decimal' ? (
+                                                    formatAvg(averages[col.key], col.type)
+                                                ) : '—'}
+                                            </td>
+                                        ))}
+                                    </tr>
+                                </tfoot>
                             </table>
                         </div>
                         <div className="pagination">
